--- a/README.Rmd
+++ b/README.Rmd
@@ -4,7 +4,9 @@ output:
   github_document:
     html_preview: true
     toc: true
+    toc_float: true
     toc_depth: 4
+    
 ---
 
 ## Getting Started
@@ -30,6 +32,8 @@ The following is an example of the analysis info file:
 
 **QCC_folder =** /mnt/cgs-fs3/SERVICES/Microarrays/GX-Affy/GX-A.Tester-10235/QCC_file
 
+**Normalisation =** TRUE
+
 ------------------------------------------------------------------------------------------------------
 <br>
 
@@ -39,6 +43,7 @@ The following is an explanation of the lines within the analysis info file:
 **project_location =** *\<path to directory of the analysis\>*   
 **rawCELs_folder =** *\<path to the raw CEL files folder\>*    
 **QCC_folder =** *\<path to the QCC file folder\>*    
+**Normalisation =** *\TRUE or FALSE to perform GCCN-SST normalisation on the raw CEL files\*
     
  ------------------------------------------------------------------------------------------------------  
    
@@ -61,3 +66,8 @@ $ python bin/create_analysisinfo_file.py
 This will create an "analysis_info.txt" file, which you can open in a text editor and fill, with the project specific paths and parameters.
 
 <br>   
+
+
+### Step 2: Obtain and process CEL files
+
+#### Processing raw CEL files 
