--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,7 @@ The following is an example of the analysis info file:
 
 **QCC_folder =** /mnt/cgs-fs3/SERVICES/Microarrays/GX-Affy/GX-A.Tester-10235/QCC_file
 
-**Normalisation =** TRUE
+**Normalization =** TRUE
 
 ------------------------------------------------------------------------------------------------------
 <br>
@@ -43,7 +43,7 @@ The following is an explanation of the lines within the analysis info file:
 **project_location =** *\<path to directory of the analysis\>*   
 **rawCELs_folder =** *\<path to the raw CEL files folder\>*    
 **QCC_folder =** *\<path to the QCC file folder\>*    
-**Normalisation =** *TRUE or FALSE to perform GCCN-SST normalisation on the raw CEL files*
+**Normalization =** *TRUE or FALSE to perform GCCN-SST normalization on the raw CEL files*
     
  ------------------------------------------------------------------------------------------------------  
    
