--- a/README.Rmd
+++ b/README.Rmd
@@ -42,11 +42,15 @@ The following is an example of the analysis info file:
 The following is an explanation of the lines within the analysis info file:  
 
 ------------------------------------------------------------------------------------------------------
-**project_location =** *\<path to directory of the analysis\>*   
-**rawCELs_folder =** *\<path to the raw CEL files folder\>*    
-**QCC_folder =** *\<path to the QCC file folder\>*    
+**project_location =** *\<path to directory of the analysis\>* 
+
+**rawCELs_folder =** *\<path to the raw CEL files folder\>*  
+
+**QCC_folder =** *\<path to the QCC file folder\>*   
+
 **normalization =** *TRUE or FALSE to perform GCCN-SST normalization on the raw CEL files. Default = TRUE*
-**data_target =** *The level at which the RMA normalisation is performed. Options are "transcript" or "probeset". Default = transcript*
+
+**data_target =** *The level at which the RMA normalization is performed. Options are "transcript" or "probeset". Default = transcript*
     
  ------------------------------------------------------------------------------------------------------  
    
