--- a/README.Rmd
+++ b/README.Rmd
@@ -1,42 +1,62 @@
 ---
-title: "Microarray pipeline"
-output:
-  github_document:
+title: "Microarray_piepline_README"
+  output: 
+    github_document:
     html_preview: true
     toc: true
     toc_float: true
     toc_depth: 4
-    
+author: "Stef Wenlock"
+
 ---
 
 ## Getting Started
 1. Create a new folder in cgs-fs3 or any other location with your chosen project name - referred to as the "project folder" in this README.   
 2. Create a "bin/" folder in the project folder.   
-3. Download and copy the scripts to the "bin/" folder. 
+3. Download and copy the scripts from the github "Microarray/bin" to the "bin/" folder. 
+4. Create an "Analysis" folder in the project folder. 
+5. In this "Analysis" folder, create two more folders, "Array_files" and "cels"
+6. Copy the corresponding QCC, PGF, and CLF files for your array and species into the "Array_files" folder. 
+7. Copy the **raw** CEL files for each sample into the "cels" folder. 
 
 
 ## Running the pipeline
 
 ### 1. Analysis info file
-A central part of the pipeline is the **analysis info** file. It has information about the project location (main working directory), the original CEL files folder, the QCC file folder and additional parameters used throughout the analysis. 
+A central part of the pipeline is the **analysis info** file. It has information about the analysis directory location, the original CEL files folder, the array files folder and additional parameters used throughout the analysis. 
 
 #### Format of the analysis info file
-The analysis info file is a simple .txt file, with each line providing information. Different parameters on the same line are separated by the semicolon (i.e ";") character.   
+The analysis info file is a simple .txt file, with each line providing information. Different parameters on the same line are separated by the semicolon (i.e ";") character. These arguments are in a set order so please do not change the order of the lines. A template analysis_info.txt file can be downloaded in the github Microarray folder.    
+
 
 The following is an example of the analysis info file:   
 
 ----------------------------------------------------------------------------------------------------
-**project_location =** /mnt/cgs-fs3/SERVICES/Microarrays/GX-Affy/GX-A.Tester-10235
+**analysis_directory =** /mnt/cgs-fs3/SERVICES/Microarrays/GX-Affy/GX-A.Tester-10235/Analysis
 
-**rawCELs_folder =** /mnt/cgs-fs3/SERVICES/Microarrays/GX-Affy/GX-A.Tester-10235/cels 
+**rawCELs_folder =** /mnt/cgs-fs3/SERVICES/Microarrays/GX-Affy/GX-A.Tester-10235/Analysis/cels 
 
-**QCC_folder =** /mnt/cgs-fs3/SERVICES/Microarrays/GX-Affy/GX-A.Tester-10235/QCC_file
+**Array_info  =** /mnt/cgs-fs3/SERVICES/Microarrays/GX-Affy/GX-A.Tester-10235/Analysis/Array_files
 
-**paired_samples =** TRUE
-
-**normalization =** TRUE
+**GCCN-SST_correction =** TRUE
 
 **data_target =** core
+
+**QC_raw =** TRUE
+
+**QC_norm =** TRUE
+
+**GEO_output =** TRUE
+
+**group_comparisons =** TRUE
+
+**report_gen =** TRUE
+
+**functional_analysis =** TRUE
+
+**samples_to_exclude =** None
+
+**control_QC =** TRUE
 
 ------------------------------------------------------------------------------------------------------
 <br>
@@ -44,41 +64,73 @@ The following is an example of the analysis info file:
 The following is an explanation of the lines within the analysis info file:  
 
 ------------------------------------------------------------------------------------------------------
-**project_location =** *\<path to directory of the analysis\>* 
+**analysis_directory =** *\<path to directory of the analysis\>* 
 
 **rawCELs_folder =** *\<path to the raw CEL files folder\>*  
 
-**QCC_folder =** *\<path to the QCC file folder\>*   
+**Array_info =** *\<path to the array folder, containing the QCC, PGF and CLF files\>*   
 
 **paired_samples=** *TRUE or FALSE whether the samples are paired and a SibShip column is required in the "comparisons.csv" and design matrix.*
 
-**normalization =** *TRUE or FALSE to perform GCCN-SST normalization on the raw CEL files. Default = TRUE*
+**GCCN-SST_correction =** *TRUE or FALSE to perform GCCN-SST normalization on the raw CEL files. Default = TRUE*
 
 **data_target =** *The level at which the RMA normalization is performed. Options are "core" or "probeset", which refer to the transcript and probeset level data, respectively. Default = core.*
+
+**QC_raw =** *TRUE or FALSE to perform QC on the raw data. Default = TRUE.*
+
+**QC_norm =** *TRUE or FALSE to perform QC on the RMA normalized data. Default = TRUE.*
+
+**GEO_output =** *TRUE or FALSE to output the data required to produce a GEO submission. Default = TRUE.*
+
+**group_comparisons =** *TRUE or FALSE to perform group comparisons on the data, using the comparisons from the "comparisons.csv" file. Default = TRUE.*
+
+**report_gen =** *TRUE or FALSE to generate a report on the whole analysis, once it has been completed. Default = TRUE.*
+
+**functional_analysis =** *TRUE or FALSE to perform functional analysis on the data. Default = TRUE.*
+
+**samples_to_exclude =** *The name of any samples which need to be excluded. Default = None.*
+
+**control_QC =** *TRUE or FALSE to perform QC on the control data, using the corresponding QCC array file. Default = TRUE.*
+
     
  ------------------------------------------------------------------------------------------------------  
    
+### Filling in the analysis_info.txt 
+Once you have downloaded the analysis_info.txt, fill in the correct arguments. **The arguments given on each line dictates which functions are run in the script.** Using the default arguments will allow you to run the pipeline from start to finish, which will mean running: GCCN-SST correction on the raw CELs, control QC, raw data QC, rma data QC, GEO submissiong folder creation, and group comparisons. This should be suitable for most microarray analyses. In order to do this you will need to supply the correct array files, sample_info file and comparisons file (see below sections). 
 
-#### QCC file   
-The QCC file is used to define group membership for probesets on a chip (typically different quality assessment groups), enumerate what individual probeset values should be written to CHP file headers and define textual labels for probesets for genotyping and expression arrays and should be specific to the chip/array you are using.    
+
+#### Array files   
+
+### QCC 
+The QCC file is used to define group membership for probesets on a chip (typically different quality assessment groups), enumerate what individual probeset values should be written to CHP file headers and define textual labels for probesets for genotyping and expression arrays and should be specific to the chip/array you are using.   
+
+### PGF 
+The probe group file (PGF) give information on what probes are contained within a probeset and information about the probes required for the analysis. 
+
+### CLF 
+The CLF (cel layout file) maps probe IDs to a specific location in the CEL file.  
 
 
-#### How to create the analysis info file
+#### Sample information and group comparisons
+In the github Microarray folder, you will see two additional template .cvs files: "sample_info.csv" and "comparisons.csv". Download both template
 
-**Use the script**: bin/create_analysisinfo_file.py
+
+
+#### Standard pipeline command example
+
+**Use the script**: bin/driver.R
 
 **Command line example**:
 
 ```{r, engine = 'bash', eval = FALSE}
-$ python bin/create_analysisinfo_file.py
+$ /usr/bin/Rscript bin/driver.R /mnt/cgs-fs3/SERVICES/Microarrays/GX-A-Tester-xxx/Analysis/analysis_info.txt
 ```
 
-
-This will create an "analysis_info.txt" file, which you can open in a text editor and fill, with the project specific paths and parameters.
+This will run the scripts using the arguments supplied in the "analysis_info.txt" file, which you can be opened in a text editor and changed depending on which functions/outputs you require.
 
 <br>   
 
 
-### Step 2: Obtain and process CEL files
 
-#### Processing raw CEL files 
+
+
